# dynamic

./: .clang-format  .gitignore  CMakeLists.txt  COPYING  README.md
src/: CMakeLists.txt  dynamic.cpp  dynamic.hpp
test/: CMakeLists.txt  test_njones_dynamic.hpp
